@@ -10,6 +10,7 @@ HEAD
 - added devicestate option.
 - capi-chat can play music-on-hold for first caller.
 - adapt to new asterisk 1.6 API
+- fixed reading capi profile on big-endian
 
 chan_capi-1.0.2
 ------------------
